# python

./: .gitignore  .ruff.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gitcalver/: __init__.py  __main__.py  _branch.py  _errors.py  _format.py  _git.py  _hatch_hooks.py  _hatch_source.py  _version.py  cli.py
tests/: _helpers.py  conftest.py  test_gitcalver.py
