# Copyright © 2026 Michael Shields
# SPDX-License-Identifier: MIT

[project]
name = "gitcalver"
dynamic = ["version"]
description = "Deterministic calendar versioning from git history"
# Support all non-EOL Python versions.
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    {name = "Michael Shields", email = "shields@gitcalver.org"},
]
keywords = ["versioning", "calver", "git", "calendar-versioning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://gitcalver.org"
Source = "https://github.com/gitcalver/python"
Issues = "https://github.com/gitcalver/python/issues"

[project.scripts]
gitcalver = "gitcalver.cli:main"

[project.entry-points.hatch]
gitcalver = "gitcalver._hatch_hooks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "code"
path = "src/gitcalver/__init__.py"
expression = "get_version(dirty='+dirty')"
search-paths = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/gitcalver"]

[dependency-groups]
dev = [
    "hatchling>=1.1.0",
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
